--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,8 @@ dmypy.json
 # Pyre type checker
 .pyre/
 .DS_Store
+.idea/misc.xml
+.idea/modules.xml
+.idea/sites_available_checker.iml
+.idea/vcs.xml
+.idea/inspectionProfiles/profiles_settings.xml
